fix nav element alignment

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ body{
         text-align: center
     }
 
-    .column-navigation{
+    .column-navigation a {
         display: inline;
     }
 
